docs/api/qiskit/0.29/qiskit.circuit.library.SXdgGate.mdx
---
title: SXdgGate
description: API reference for qiskit.circuit.library.SXdgGate
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.SXdgGate
---

# SXdgGate

<Class id="qiskit.circuit.library.SXdgGate" github="https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/circuit/library/standard_gates/sx.py" signature="SXdgGate(label=None)">
  Bases: `qiskit.circuit.gate.Gate`

  The inverse single-qubit Sqrt(X) gate.

  $$
  \begin{split}\sqrt{X}^{\dagger} = \frac{1}{2} \begin{pmatrix}
          1 - i & 1 + i \\
          1 + i & 1 - i
      \end{pmatrix}\end{split}
  $$

  <Admonition title="Note" type="note">
    A global phase difference exists between the definitions of $RX(-\pi/2)$ and $\sqrt{X}^{\dagger}$.

    $$
    \begin{split}RX(-\pi/2) = \frac{1}{\sqrt{2}} \begin{pmatrix}
                1 & i \\
                i & 1
              \end{pmatrix}
            = e^{-i pi/4} \sqrt{X}^{\dagger}\end{split}
    $$
  </Admonition>

  Create new SXdg gate.

  ## Methods Defined Here

  ### inverse

  <Function id="qiskit.circuit.library.SXdgGate.inverse" signature="SXdgGate.inverse()">
    Return inverse SXdg gate (i.e. SX).
  </Function>

  ## Attributes

  ### decompositions

  <Attribute id="qiskit.circuit.library.SXdgGate.decompositions" name="decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.SXdgGate.definition" name="definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.SXdgGate.duration" name="duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.library.SXdgGate.label" name="label">
    Return instruction label

    **Return type**

    `str`
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.library.SXdgGate.params" name="params">
    return instruction params.
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.library.SXdgGate.unit" name="unit">
    Get the time unit of duration.
  </Attribute>
</Class>

